--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,5 @@ python-dotenv
 chromadb
 sentence-transformers
 beautifulsoup4>=4.14.2
+prometheus_client    # optional; only if you enable metrics
+httpx>=0.27,<1
